--- a/src/index.html
+++ b/src/index.html
@@ -1,14 +1,20 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <meta charset="utf-8">
-  <title>MDZZ~~</title>
-  <meta name="viewport" content="initial-scale=1, maximum-scale=1">
+    <meta charset="utf-8">
+    <title><%= htmlWebpackPlugin.options.title %></title>
+    <meta name="viewport" content="initial-scale=1, maximum-scale=1">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
 </head>
 <body>
 
-  <div id="root">mdzz</div>
-  <script src="/assets/commons.js"></script>
-  <script src="/assets/main.bundle.js"></script>
+<div id="root">mdzz~~~~~</div>
+<div>
+    <p>mdzz</p>
+    <p>mdzz</p>
+    <p>mdzz</p>
+</div>
+<script src="commons.js"></script> <!--http://127.0.0.1:8888/commons.js-->
+<script src="bundle.js"></script>
 </body>
 </html>
